[gd_scene load_steps=40 format=3 uid="uid://biaeo50jq4a"]

[ext_resource type="Script" uid="uid://dah33oao3jg3j" path="res://scripts/ui/ui.gd" id="1_ro3t7"]
[ext_resource type="Texture2D" uid="uid://nhomkbowas20" path="res://art/UI/ui_right_filigree.png" id="2_04ait"]
[ext_resource type="Texture2D" uid="uid://cltvq4bah34ot" path="res://art/UI/exit_button2.png" id="2_mrqhp"]
[ext_resource type="Texture2D" uid="uid://bwr74aea1rb0x" path="res://art/UI/trip_meter_container.png" id="2_ok71f"]
[ext_resource type="Texture2D" uid="uid://cfjnjnhmer8jn" path="res://art/UI/Quit.png" id="3_75u2n"]
[ext_resource type="Texture2D" uid="uid://du2nsm0wcc0o0" path="res://art/UI/exit_button3.png" id="3_ppsko"]
[ext_resource type="Texture2D" uid="uid://du0spd2ubp0e7" path="res://art/UI/coal_button2.png" id="5_jxfsc"]
[ext_resource type="Texture2D" uid="uid://kqy4bad0rufp" path="res://art/UI/$.png" id="5_mrqhp"]
[ext_resource type="Texture2D" uid="uid://ba883er0at2oi" path="res://art/UI/speedBarUnder.png" id="6_24e4x"]
[ext_resource type="FontFile" uid="uid://caq0paj0qfvw1" path="res://art/UI/Retro Gaming.ttf" id="6_ppsko"]
[ext_resource type="Texture2D" uid="uid://gddh3tgmo11r" path="res://art/UI/coal_button3.png" id="6_q7onm"]
[ext_resource type="Texture2D" uid="uid://b05tv0l3uii1" path="res://art/UI/speedBarOver.png" id="7_ukj8e"]
[ext_resource type="Script" uid="uid://ehon7ag0qbuv" path="res://scripts/ui/available_funds.gd" id="7_y5wdm"]
[ext_resource type="Texture2D" uid="uid://c035eubhofex3" path="res://art/UI/speedBarProgress.png" id="8_w7enk"]
[ext_resource type="Texture2D" uid="uid://blb4ndk508068" path="res://art/UI/trip_meter.png" id="8_y5wdm"]
[ext_resource type="Texture2D" uid="uid://nu4enwrnub5a" path="res://art/UI/settings_button1.png" id="9_ce6m7"]
[ext_resource type="Texture2D" uid="uid://dwllsvghqrqrt" path="res://art/UI/progressTrain.png" id="9_jxfsc"]
[ext_resource type="Texture2D" uid="uid://6jyty6yhcmc4" path="res://art/UI/speedSteam.png" id="9_ukj8e"]
[ext_resource type="Texture2D" uid="uid://dou06ilfuonf7" path="res://art/UI/speedBarCone.png" id="9_w7enk"]
[ext_resource type="Texture2D" uid="uid://gadqhoqophqy" path="res://art/UI/settings_button2.png" id="10_ok71f"]
[ext_resource type="Texture2D" uid="uid://bmf6a8f3dibsg" path="res://art/UI/no_button2.png" id="13_04ait"]
[ext_resource type="Texture2D" uid="uid://527tl15tcrqd" path="res://art/UI/yes_button2.png" id="14_jfcp0"]
[ext_resource type="Texture2D" uid="uid://bcf8k38mli4om" path="res://art/UI/no_button3.png" id="14_ouxww"]
[ext_resource type="Script" uid="uid://c1nx3fngpow7" path="res://scripts/ui/trip_meter.gd" id="14_q7onm"]
[ext_resource type="Texture2D" uid="uid://mmkjjy05ioaa" path="res://art/UI/yes_button3.png" id="15_04ait"]
[ext_resource type="PackedScene" uid="uid://bw8kueb0wjrk5" path="res://scenes/UI/station_ui.tscn" id="23_ppsko"]
[ext_resource type="Texture2D" uid="uid://cmyixcexfyno" path="res://art/UI/stat_container.png" id="24_hf4xv"]
[ext_resource type="Texture2D" uid="uid://dnffa3t8dih2q" path="res://art/UI/icons1.png" id="25_7nycj"]
[ext_resource type="Texture2D" uid="uid://df6vt3c5lq0tp" path="res://art/UI/icons2.png" id="26_as1d2"]
[ext_resource type="Texture2D" uid="uid://dnxrwjvs3qvnn" path="res://art/UI/icons3.png" id="27_1ra7p"]
[ext_resource type="Texture2D" uid="uid://ccq2i8rbfmqxf" path="res://art/UI/icons4.png" id="28_3ie5p"]
[ext_resource type="Texture2D" uid="uid://bcq8rbrfxug5a" path="res://art/UI/icons5.png" id="29_14ro7"]
[ext_resource type="Texture2D" uid="uid://5h5w0xi84wp0" path="res://art/UI/icons6.png" id="30_h86w1"]
[ext_resource type="Texture2D" uid="uid://b3gpcro503xcm" path="res://art/UI/arrow_keys3.png" id="32_ra560"]
[ext_resource type="Texture2D" uid="uid://dh85nm2yabs4j" path="res://art/UI/arrow_keys4.png" id="33_n8xku"]
[ext_resource type="Texture2D" uid="uid://bln62fatnkjvh" path="res://art/UI/arrow_keys1.png" id="34_co01f"]
[ext_resource type="Texture2D" uid="uid://b54yy4msc0udm" path="res://art/UI/arrow_keys2.png" id="35_cqyjr"]

[sub_resource type="Curve2D" id="Curve2D_jxfsc"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -80, 0, 0, 0, 0, 0, 79, 0)
}
point_count = 2

[sub_resource type="Theme" id="Theme_dj8aq"]

[node name="PlayerUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ro3t7")
metadata/_edit_horizontal_guides_ = [1044.0, 1064.0]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Stats" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = -310.0
offset_top = -14.0
offset_right = -270.0
offset_bottom = 26.0

[node name="Panel" type="Sprite2D" parent="CanvasLayer/Stats"]
texture_filter = 1
position = Vector2(453, 1051)
texture = ExtResource("24_hf4xv")

[node name="PassengersIcon" type="Sprite2D" parent="CanvasLayer/Stats"]
texture_filter = 1
position = Vector2(456.5, 1044)
texture = ExtResource("25_7nycj")

[node name="PackagesIcon" type="Sprite2D" parent="CanvasLayer/Stats"]
texture_filter = 1
position = Vector2(513, 1043)
texture = ExtResource("26_as1d2")

[node name="DiningServicesIcon" type="Sprite2D" parent="CanvasLayer/Stats"]
texture_filter = 1
position = Vector2(513, 1064)
texture = ExtResource("27_1ra7p")

[node name="MultiplierIcon" type="Sprite2D" parent="CanvasLayer/Stats"]
texture_filter = 1
position = Vector2(399.5, 1044)
texture = ExtResource("28_3ie5p")

[node name="StaffIcon" type="Sprite2D" parent="CanvasLayer/Stats"]
texture_filter = 1
position = Vector2(399.5, 1063.5)
texture = ExtResource("29_14ro7")

[node name="StokerIcon" type="Sprite2D" parent="CanvasLayer/Stats"]
texture_filter = 1
position = Vector2(336, 1054)
texture = ExtResource("30_h86w1")

[node name="Icon7" type="Sprite2D" parent="CanvasLayer/Stats"]
texture_filter = 1
position = Vector2(457, 1063.5)
texture = ExtResource("29_14ro7")

[node name="Multiplier" type="Label" parent="CanvasLayer/Stats"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 8.7375
anchor_top = 1.175
anchor_right = 8.7375
anchor_bottom = 1.175
offset_left = 63.0
offset_top = 988.0
offset_right = 103.0
offset_bottom = 1011.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("6_ppsko")
text = "0"
metadata/_edit_use_anchors_ = true

[node name="Passengers" type="Label" parent="CanvasLayer/Stats"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 10.125
anchor_top = 1.175
anchor_right = 10.125
anchor_bottom = 1.175
offset_left = 63.0
offset_top = 988.0
offset_right = 103.0
offset_bottom = 1011.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("6_ppsko")
text = "0"
metadata/_edit_use_anchors_ = true

[node name="Packages" type="Label" parent="CanvasLayer/Stats"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 11.5125
anchor_top = 1.175
anchor_right = 11.5125
anchor_bottom = 1.175
offset_left = 63.0
offset_top = 988.0
offset_right = 103.0
offset_bottom = 1011.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("6_ppsko")
text = "0"
metadata/_edit_use_anchors_ = true

[node name="Staff" type="Label" parent="CanvasLayer/Stats"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 8.7375
anchor_top = 1.6625
anchor_right = 8.7375
anchor_bottom = 1.6625
offset_left = 63.0
offset_top = 988.0
offset_right = 103.0
offset_bottom = 1011.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("6_ppsko")
text = "0"
metadata/_edit_use_anchors_ = true

[node name="Cars" type="Label" parent="CanvasLayer/Stats"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 10.125
anchor_top = 1.675
anchor_right = 10.125
anchor_bottom = 1.675
offset_left = 63.0
offset_top = 988.0
offset_right = 103.0
offset_bottom = 1011.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("6_ppsko")
text = "0"
metadata/_edit_use_anchors_ = true

[node name="DiningServices" type="Label" parent="CanvasLayer/Stats"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 11.525
anchor_top = 1.675
anchor_right = 11.525
anchor_bottom = 1.675
offset_left = 63.0
offset_top = 988.0
offset_right = 103.0
offset_bottom = 1011.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("6_ppsko")
text = "0"
metadata/_edit_use_anchors_ = true

[node name="UpArrow1" type="TextureButton" parent="CanvasLayer/Stats"]
texture_filter = 1
layout_mode = 0
offset_left = 348.0
offset_top = 1031.0
offset_right = 365.0
offset_bottom = 1046.0
texture_normal = ExtResource("32_ra560")
texture_pressed = ExtResource("33_n8xku")

[node name="DownArrow1" type="TextureButton" parent="CanvasLayer/Stats"]
texture_filter = 1
layout_mode = 0
offset_left = 347.0
offset_top = 1063.0
offset_right = 364.0
offset_bottom = 1078.0
texture_normal = ExtResource("34_co01f")
texture_pressed = ExtResource("35_cqyjr")

[node name="$" type="Sprite2D" parent="CanvasLayer/Stats"]
texture_filter = 1
position = Vector2(342.5, 1008)
texture = ExtResource("5_mrqhp")

[node name="Funds" type="Label" parent="CanvasLayer/Stats"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 7.25
anchor_top = 0.25
anchor_right = 7.25
anchor_bottom = 0.25
offset_left = 63.0
offset_top = 988.0
offset_right = 103.0
offset_bottom = 1011.0
theme_override_colors/font_color = Color(0.246873, 1, 0.0897869, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(9.14484e-07, 0.887663, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("6_ppsko")
text = "0"
script = ExtResource("7_y5wdm")
metadata/_edit_use_anchors_ = true

[node name="Quit?" type="Sprite2D" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
top_level = true
z_as_relative = false
texture_filter = 1
position = Vector2(924, 862)
texture = ExtResource("3_75u2n")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Quit?"]
offset_left = -73.0
offset_top = -1.0
offset_right = 95.0
offset_bottom = 63.0

[node name="Yes" type="TextureButton" parent="CanvasLayer/Quit?/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("14_jfcp0")
texture_pressed = ExtResource("15_04ait")
metadata/_edit_use_anchors_ = true

[node name="No" type="TextureButton" parent="CanvasLayer/Quit?/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("13_04ait")
texture_pressed = ExtResource("14_ouxww")
metadata/_edit_use_anchors_ = true

[node name="TripMeterContainer" type="Sprite2D" parent="CanvasLayer"]
texture_filter = 1
position = Vector2(143, 1043)
texture = ExtResource("2_ok71f")

[node name="ShovelCoal" type="TextureButton" parent="CanvasLayer/TripMeterContainer"]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.06
anchor_top = 0.153
anchor_right = 0.23
anchor_bottom = 0.819
offset_left = -140.92
offset_top = -36.016
offset_right = -140.86
offset_bottom = -35.968
texture_normal = ExtResource("5_jxfsc")
texture_pressed = ExtResource("6_q7onm")
metadata/_edit_use_anchors_ = true

[node name="TripMeter" type="Sprite2D" parent="CanvasLayer/TripMeterContainer"]
texture_filter = 1
position = Vector2(23, 1)
texture = ExtResource("8_y5wdm")

[node name="Path2D" type="Path2D" parent="CanvasLayer/TripMeterContainer/TripMeter"]
curve = SubResource("Curve2D_jxfsc")

[node name="PathFollow2D" type="PathFollow2D" parent="CanvasLayer/TripMeterContainer/TripMeter/Path2D"]
position = Vector2(-80, 0)
script = ExtResource("14_q7onm")

[node name="TrainTripIcon" type="Sprite2D" parent="CanvasLayer/TripMeterContainer/TripMeter/Path2D/PathFollow2D"]
texture = ExtResource("9_jxfsc")

[node name="RCornerUI" type="Sprite2D" parent="CanvasLayer"]
texture_filter = 1
position = Vector2(1822, 1025)
texture = ExtResource("2_04ait")

[node name="Quit" type="TextureButton" parent="CanvasLayer/RCornerUI"]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.714
anchor_top = 0.1
anchor_right = 0.878
anchor_bottom = 0.436
offset_left = -97.944
offset_top = -55.0
offset_right = -98.088
offset_bottom = -54.96
theme = SubResource("Theme_dj8aq")
texture_normal = ExtResource("2_mrqhp")
texture_pressed = ExtResource("3_ppsko")

[node name="Settings" type="TextureButton" parent="CanvasLayer/RCornerUI"]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.464
anchor_top = 0.1
anchor_right = 0.628
anchor_bottom = 0.436
offset_left = -97.944
offset_top = -55.0
offset_right = -98.088
offset_bottom = -54.96
theme = SubResource("Theme_dj8aq")
texture_normal = ExtResource("9_ce6m7")
texture_pressed = ExtResource("10_ok71f")

[node name="SpeedGauge" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = -4.0
offset_right = -4.0

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer/SpeedGauge"]
unique_name_in_owner = true
top_level = true
texture_filter = 1
layout_mode = 0
offset_left = 277.0
offset_top = 952.0
offset_right = 356.0
offset_bottom = 1080.0
max_value = 17.0
step = 0.01
value = 8.0
fill_mode = 3
texture_under = ExtResource("6_24e4x")
texture_over = ExtResource("7_ukj8e")
texture_progress = ExtResource("8_w7enk")

[node name="cone" type="Sprite2D" parent="CanvasLayer/SpeedGauge"]
top_level = true
texture_filter = 1
position = Vector2(316, 935)
texture = ExtResource("9_w7enk")

[node name="steam" type="Sprite2D" parent="CanvasLayer/SpeedGauge"]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(379, 940)
texture = ExtResource("9_ukj8e")

[node name="Tabs" parent="CanvasLayer" instance=ExtResource("23_ppsko")]
unique_name_in_owner = true
visible = false

[node name="Timer" type="Timer" parent="CanvasLayer/Tabs"]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[node name="CollapseButton" type="TextureButton" parent="CanvasLayer"]
unique_name_in_owner = true
texture_filter = 1
offset_left = 254.0
offset_top = 1034.0
offset_right = 271.0
offset_bottom = 1049.0
toggle_mode = true
texture_normal = ExtResource("32_ra560")
texture_pressed = ExtResource("34_co01f")

[connection signal="pressed" from="CanvasLayer/Quit?/HBoxContainer/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="CanvasLayer/Quit?/HBoxContainer/No" to="." method="_on_no_pressed"]
[connection signal="pressed" from="CanvasLayer/TripMeterContainer/ShovelCoal" to="." method="_on_shovel_coal_pressed"]
[connection signal="pressed" from="CanvasLayer/RCornerUI/Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="CanvasLayer/Tabs/Timer" to="." method="pop_up"]
[connection signal="pressed" from="CanvasLayer/CollapseButton" to="." method="collapse_menu"]
